# smarty-esp8266

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  README.md  library.json  platformio.ini
.circleci/: config.yml
data/: config.json
deploy/: BedroomAmbienceLight.ini  BedroomAmbientLight.ini  BedroomBedLight.ini  BedroomCeilingLight.ini  DevelopmentBoard.ini  HallCeilingLight.ini  KitchenCabinetLight.ini  KitchenCeilingLight.ini  KitchenSideboardLight.ini  LivingRoomCeilingLight.ini  LivingRoomSofaLight.ini  OutdoorBackdoorLight.ini  OutdoorFrontdoorLight.ini  deploy.sh
examples/Custom/: Custom.ini
examples/CustomV1/: CustomV1.cpp  CustomV1.ini
examples/CustomV2/: CustomV2.cpp
examples/CustomV3/: CustomV3.cpp  CustomV3.ini
examples/SonoffBasic/: SonoffBasic.cpp  SonoffBasic.ini
examples/SonoffS20/: SonoffS20.cpp  SonoffS20.ini
src/: CMakeLists.txt  main.cpp
src/Smarty/: AbstractJsonSerializable.hpp  Config.cpp  Config.hpp  Firmware.cpp  Firmware.hpp  Hardware.cpp  Hardware.hpp  Http.cpp  Http.hpp  Mqtt.cpp  Mqtt.hpp  MqttClient.cpp  MqttClient.hpp  MqttConfig.hpp  MqttPublication.cpp  MqttPublication.hpp  MqttSubscription.cpp  MqttSubscription.hpp  Ota.cpp  Ota.hpp  Smarty.cpp  Smarty.hpp  System.cpp  System.hpp  SystemConfig.hpp  Timer.cpp  Timer.hpp  Uptime.cpp  Uptime.hpp  Wifi.cpp  Wifi.hpp  WifiConfig.hpp
src/Smarty/Transducer/: AbstractActuator.cpp  AbstractActuator.hpp  AbstractSensor.cpp  AbstractSensor.hpp  AbstractState.hpp  AbstractTransducer.cpp  AbstractTransducer.hpp  BinaryActuator.cpp  BinaryActuator.hpp  BinaryActuatorState.cpp  BinaryActuatorState.hpp  Button.cpp  Button.hpp  ButtonState.cpp  ButtonState.hpp  Dht.cpp  Dht.hpp  DhtState.cpp  DhtState.hpp  Led.cpp  Led.hpp  Relay.cpp  Relay.hpp
test/: BinaryActuatorTest.cpp  ButtonTest.cpp  CMakeLists.txt  MqttPublicationTest.cpp  MqttSubscriptionTest.cpp  UptimeTest.cpp
test/mock/: Arduino.cpp  Arduino.h  Arduino.hpp  ArduinoMock.cpp  ArduinoMock.hpp  HardwareSerialMock.cpp  HardwareSerialMock.hpp  TestFixture.cpp  TestFixture.hpp
